# itidigital-data-challenge

./: README.md  pyproject.toml
itidigital/: variables.py
itidigital/analytics/sql/: transactions_per_customer.sql
itidigital/data_quality/: event_validator.py  main.py
itidigital/data_quality/builder/: base.py
itidigital/data_quality/event/: builder.py  event.py  exceptions.py  validator.py
itidigital/data_quality/schema/: builder.py  event.py
itidigital/sql/: json_schema_to_hive.py  main.py
itidigital/sql/athena/: exceptions.py
itidigital/sql/athena/hive/: properties.py  table.py
itidigital/sql/athena/statement_templates/: ddl.txt
itidigital/sql/athena/tools/: hive_table_creator.py  json2hive.py
itidigital/utils/builder/: base.py
itidigital/utils/schema/: builder.py  event.py  helpers.py
tests/itidigital/data_quality/event/: test_builder.py  test_event.py  test_validator.py
tests/itidigital/data_quality/event/test_data/: examples.py
tests/itidigital/sql/hive/: test_table.py
tests/itidigital/sql/tools/: test_hive_table_creator.py
tests/itidigital/utils/schema/: test_builder.py  test_helpers.py
tests/test_data/: examples.py
